all fun+calendar

--- a/app/src/main/res/layout/item_dialog.xml
+++ b/app/src/main/res/layout/item_dialog.xml
@@ -39,7 +39,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
+            android:layout_marginLeft="15dp"
             android:layout_gravity="center_vertical"
             android:orientation="horizontal">
             <EditText
@@ -63,17 +63,24 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
+            android:layout_height="match_parent"
+            android:paddingHorizontal="15dp"
             android:layout_gravity="center_vertical"
             android:orientation="horizontal">
             <EditText
                 android:id="@+id/tv_deadline"
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_weight="1"
                 android:layout_height="match_parent"
                 android:hint="muddati"
                 android:textSize="20sp"/>
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:id="@+id/calendar"
+                android:src="@drawable/ic_date"/>
+
 
         </LinearLayout>
     </androidx.cardview.widget.CardView>
