--- a/app/src/main/res/layout/rv_item.xml
+++ b/app/src/main/res/layout/rv_item.xml
@@ -7,20 +7,23 @@
 
     <LinearLayout
         android:layout_width="0dp"
-        android:layout_weight="2"
+        android:layout_weight="1.8"
         android:layout_height="match_parent"
         android:padding="10dp"
         android:orientation="vertical"
-        android:background="#FBC112">
-
+        android:background="#B2FF9800">
+<ScrollView
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
     <TextView
         android:id="@+id/name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:text="name"
         android:textSize="25sp"
         android:textColor="@color/teal_700"
         />
+</ScrollView>
 
     <TextView
         android:id="@+id/deadline"
@@ -37,12 +40,13 @@
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:orientation="horizontal"
-        android:background="#FBC112">
+        android:paddingTop="15dp"
+        android:background="#B2FF9800">
         <TextView
             android:id="@+id/status"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
+            android:layout_gravity="top"
             android:text="status"
             android:textSize="20sp"
             android:textColor="@color/teal_700"
@@ -52,14 +56,14 @@
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_weight="0.3"
+        android:layout_weight="0.25"
         android:orientation="horizontal"
-        android:background="#FBC112">
+        android:background="#B2FF9800">
 
     <ImageView
+        android:id="@+id/popupImage"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_gravity="left"
         android:src="@drawable/baseline_more_vert_24"
         />
     </LinearLayout>
